--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
       <div class="sidebar-info">
 
-        <figure class="avatar-box">
-          <img src="./assets/images/avatar11.png" alt="Y.Ravi Teja Reddy" width="80">
-        </figure>
+       <div class="profile-pic-container">
+  <img src="assets/images/avatar11.png" alt="Profile Photo" class="profile-pic">
+</div>
 
         <div class="info-content">
           <h1 class="name" title="Y.Ravi Teja Reddy">Y.Ravi Teja Reddy</h1>
